--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,8 +12,20 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url = 'https://www.matthewo.tech/maven/'
+        }
+    }
+    dependencies {
+        classpath 'org.team11260:fast-load-plugin:0.1.2'
+    }
+}
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'org.team11260.fast-load-plugin'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -23,6 +35,7 @@ android {
     }
 }
 repositories {
+    maven { url = 'https://www.matthewo.tech/maven/' }
     maven { url = 'https://jitpack.io' }
 }
 
@@ -34,4 +47,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
+    implementation 'org.team11260:fast-load:0.1.2'
 }
