--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -37,6 +37,7 @@ android {
 repositories {
     maven { url = 'https://www.matthewo.tech/maven/' }
     maven { url = 'https://jitpack.io' }
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -45,7 +46,11 @@ dependencies {
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.1-ALPHA'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
-    implementation 'org.ftclib.ftclib:core:2.1.1' // core
+    implementation 'com.acmerobotics.roadrunner:core:1.0.0-beta6'
+    implementation 'com.acmerobotics.roadrunner:actions:1.0.0-beta6'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'org.team11260:fast-load:0.1.2'
+    implementation('com.github.Dairy-Foundation.Dairy:Core:master-SNAPSHOT')
+    implementation('com.github.Dairy-Foundation.Dairy:Calcified:master-SNAPSHOT')
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.12"
 }
